@@ -24,6 +24,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #5258/#10642: if site.py encounters a .pth file that generates an error,
+  it now prints the filename, line number, and traceback to stderr and skips
+  the rest of that individual file, instead of stopping processing entirely.
+
 - Issue #4871: The zipfile module now gives a more useful error message if
   an attempt is made to use a string to specify the archive password.
 
